# electricity-grid-monitor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/: cloudflare-grid-tunnel.service  grid-monitor-dashboard-user.service  grid-monitor-dashboard.service.in  grid-monitor.service.in  home-assistant-compose.yml  pihole-compose.yml
grid_monitor/: __init__.py  battery.py  cli.py  config.py  dashboard.py  emailer.py  models.py  monitor.py  notifier.py  power.py  reporting.py  storage.py  telegram.py
scripts/: install-cloudflare-tunnel.sh  install-service.sh  install-user-dashboard.sh
tests/: helpers.py  test_battery.py  test_cli.py  test_config.py  test_dashboard.py  test_monitor.py  test_power.py  test_reporting.py  test_telegram.py
