[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-grid-monitor"
version = "1.0.0"
description = "Monitor mains electricity transitions, report outages, and send email or Telegram alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[project.scripts]
grid-monitor = "grid_monitor.cli:main"

[tool.setuptools.packages.find]
include = ["grid_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
